# MobileCommunication

./: ChatServer.java  README.md
ChatClient/: ChatClient.sln
ChatClient/ChatClient/: CMakeLists.txt  ChatClient.pro  ChatClient.vcxproj  ChatClient.vcxproj.filters
ChatClient/ChatClient/Debug/: ChatClient.exe.recipe  ChatClient.ilk  vc143.idb
ChatClient/ChatClient/Debug/ChatClient.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChatClient.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ChatClient/ChatClient/android/: AndroidManifest.xml
ChatClient/ChatClient/resources/: chatwindow.ui  loginwindow.ui  registerwindow.ui
ChatClient/ChatClient/src/: chatwindow.cpp  chatwindow.h  loginwindow.cpp  loginwindow.h  main.cpp  networkmanager.cpp  networkmanager.h  registerwindow.cpp  registerwindow.h  registerwindow.ui  ui_registerwindow.h
ChatServer/ChatServer/: ChatServer.pro  ChatServer.vcxproj  ChatServer.vcxproj.filters  data.qrc  resources.qrc
ChatServer/ChatServer/Debug/: ChatServer.exe.recipe  ChatServer.ilk  vc143.idb
ChatServer/ChatServer/android/: AndroidManifest.xml
ChatServer/ChatServer/data/: userInfo.txt
ChatServer/ChatServer/resources/: mainwindow.ui  resources.qrc
ChatServer/ChatServer/src/: Helper.cpp  Helper.h  chathistory.cpp  chathistory.h  connectionhistory.cpp  connectionhistory.h  main.cpp  mainwindow.cpp  mainwindow.h  server.cpp  server.h  serverwindow.cpp  serverwindow.h  usermanager.cpp  usermanager.h  utils.h
ChatServer/ChatServer/x64/Debug/: vc143.idb
(+10 files in other folders)
